--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -13,21 +13,21 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: snoopy\n"
+"Project-Id-Version: snoopy 1.3-8\n"
 "Report-Msgid-Bugs-To: mh+debian-packages@zugschlus.de\n"
 "POT-Creation-Date: 2007-02-26 13:12+0100\n"
-"PO-Revision-Date: 2003-08-19 16:10+0100\n"
-"Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
-"Language-Team: dutch <debian-l10n-dutch@lists.debian.org>\n"
+"PO-Revision-Date: 2005-06-02 19:49+0200\n"
+"Last-Translator: Martin Sin <martin.sin@seznam.cz>\n"
+"Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
 #. Description
 #: ../templates:1001
 msgid "Install snoopy library to /etc/ld.so.preload?"
-msgstr "Voeg de snoopy bibliotheek toe in /etc/ld.so.preload?"
+msgstr "Nainstalovat knihovnu snoopy do /etc/ld.so.preload?"
 
 #. Type: boolean
 #. Description
@@ -37,6 +37,6 @@ msgid ""
 "preloaded via /etc/ld.so.preload. Since this can potentially do harm to the "
 "system, your consent is needed."
 msgstr ""
-"De snoopy bibliotheek zal slechts betrouwbaar werken als hij via /etc/ld.so."
-"preload gedwongen op voorhand ingeladen wordt. Uw toestemming is vereist "
-"daar dit mogelijk schade toe brengt aanuw systeem."
+"Snoopy je knihovna, která pracuje spolehlivì pouze pokud je zavedena pomocí /"
+"etc/ld.so.preload. Proto¾e je zde urèitá mo¾nost, ¾e to mù¾e po¹kodit "
+"systém, tak je nutný vá¹ souhlas."
