--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -15,8 +15,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: snoopy 1.3-7\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-07-23 05:45+0900\n"
+"Report-Msgid-Bugs-To: mh+debian-packages@zugschlus.de\n"
+"POT-Creation-Date: 2007-02-26 13:12+0100\n"
 "PO-Revision-Date: 2004-07-11 04:08+0900\n"
 "Last-Translator: Hideki Yamane <henrich@samba.gr.jp>\n"
 "Language-Team: Japanese <debian-japanese@lists.debian.org>\n"
@@ -26,20 +26,18 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../templates:4
-msgid "Install snoopy library to /etc/ld.so.preload"
-msgstr "snoopy ライブラリを /etc/ld.so.preload に追加する"
+#: ../templates:1001
+msgid "Install snoopy library to /etc/ld.so.preload?"
+msgstr "snoopy ライブラリを /etc/ld.so.preload に追加する?"
 
 #. Type: boolean
 #. Description
-#: ../templates:4
+#: ../templates:1001
 msgid ""
 "snoopy is a library that can only reliably do its work if it is mandatorily "
 "preloaded via /etc/ld.so.preload. Since this can potentially do harm to the "
-"system, your consent is needed. Should the snoopy library be put into /etc/"
-"ld.so.preload?"
+"system, your consent is needed."
 msgstr ""
 "snoopy は /etc/ld.so.preload 経由で強制的に preload された場合にのみ、確実に"
 "動作するライブラリです。これは、システムに対して損害を与えることが潜在的に可"
-"能なため、同意が必要です。/etc/ld.so.preload に snoopy ライブラリを追加します"
-"か?"
+"能なため、同意が必要です。"
