--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -16,11 +16,11 @@ msgstr ""
 "Project-Id-Version: snoopy 1.3-8\n"
 "Report-Msgid-Bugs-To: mh+debian-packages@zugschlus.de\n"
 "POT-Creation-Date: 2007-02-26 13:12+0100\n"
-"PO-Revision-Date: 2005-06-02 19:49+0200\n"
-"Last-Translator: Martin Sin <martin.sin@seznam.cz>\n"
+"PO-Revision-Date: 2007-02-27 10:22+0100\n"
+"Last-Translator: Martin Sin <martin.sin@zshk.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: boolean
@@ -37,6 +37,6 @@ msgid ""
 "preloaded via /etc/ld.so.preload. Since this can potentially do harm to the "
 "system, your consent is needed."
 msgstr ""
-"Snoopy je knihovna, kter· pracuje spolehlivÏ pouze pokud je zavedena pomocÌ /"
-"etc/ld.so.preload. Protoæe je zde urËit· moænost, æe to m˘æe poπkodit "
-"systÈm, tak je nutn˝ v·π souhlas."
+"Snoopy je knihovna, kter√° pracuje spolehlivƒõ pouze pokud je zavedena pomoc√≠ "
+"/etc/ld.so.preload. Proto≈æe je zde urƒçit√° mo≈ænost, ≈æe to m≈Ø≈æe po≈°kodit "
+"syst√©m, tak je nutn√Ω v√°≈° souhlas."
