--- a/debian/po/es.po
+++ b/debian/po/es.po
@@ -35,7 +35,7 @@ msgstr ""
 "Project-Id-Version: snoopy 1.3-12\n"
 "Report-Msgid-Bugs-To: mh+debian-packages@zugschlus.de\n"
 "POT-Creation-Date: 2007-02-26 13:12+0100\n"
-"PO-Revision-Date: 2006-12-17 18:34+0100\n"
+"PO-Revision-Date: 2007-03-05 20:52+0100\n"
 "Last-Translator: Javier Fernández-Sanguino <jfs@debian.org>\n"
 "Language-Team: Debian Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -46,7 +46,7 @@ msgstr ""
 #. Description
 #: ../templates:1001
 msgid "Install snoopy library to /etc/ld.so.preload?"
-msgstr "¿Instalación de la biblioteca snoopy en «/etc/ld.so.preload»?"
+msgstr "¿Instalar la biblioteca snoopy en «/etc/ld.so.preload»?"
 
 #. Type: boolean
 #. Description
@@ -55,7 +55,4 @@ msgid ""
 "snoopy is a library that can only reliably do its work if it is mandatorily "
 "preloaded via /etc/ld.so.preload. Since this can potentially do harm to the "
 "system, your consent is needed."
-msgstr ""
-"snoopy es una biblioteca que formalmente sólo puede hacer su trabajo si está "
-"precargada obligatoriamente a través de «/etc/ld.so.preload». Se necesita su "
-"consentimiento ya que ésto potencialmente puede dañar el sistema."
+msgstr "«snoopy» es una biblioteca que sólo puede hacer su trabajo correctamente si está precargada obligatoriamente a través de «/etc/ld.so.preload». Se necesita su consentimiento ya que ésto potencialmente puede dañar el sistema."
