--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -11,10 +11,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: snoopy_1.3-3\n"
+"Project-Id-Version: snoopy_1.3-13\n"
 "Report-Msgid-Bugs-To: mh+debian-packages@zugschlus.de\n"
 "POT-Creation-Date: 2007-02-26 13:12+0100\n"
-"PO-Revision-Date: 2003-07-20 12:11GMT\n"
+"PO-Revision-Date: 2007-03-01 10:09+0100\n"
 "Last-Translator: Michel Grentzinger <mic.grentz@online.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr ""
 #. Description
 #: ../templates:1001
 msgid "Install snoopy library to /etc/ld.so.preload?"
-msgstr "Installation de la bibliothèque snoopy dans /etc/ld.so.preload ?"
+msgstr "Faut-il installer la bibliothèque snoopy dans /etc/ld.so.preload ?"
 
 #. Type: boolean
 #. Description
