--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -1,11 +1,12 @@
 # translation of snoopy_1.3-9_templates.po to italian
 # Copyright Luca Bruno <luca.br@uno.it>, 2005.
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: snoopy_1.3-9_templates\n"
 "Report-Msgid-Bugs-To: mh+debian-packages@zugschlus.de\n"
 "POT-Creation-Date: 2007-02-26 13:12+0100\n"
-"PO-Revision-Date: 2005-07-02 20:29+0200\n"
+"PO-Revision-Date: 2007-02-27 14:58+0100\n"
 "Last-Translator: Luca Bruno <luca.br@uno.it>\n"
 "Language-Team:  Italian <tp@lists.linux.it>\n"
 "MIME-Version: 1.0\n"
@@ -27,5 +28,6 @@ msgid ""
 "system, your consent is needed."
 msgstr ""
 "snoopy è una libreria che può svolgere un lavoro affidabile solo se viene "
-"obbligatoriamente tramite /etc/ld.so.preload. Poiché questo potrebbe "
-"potenzialmente danneggiare il sistema, è richiesta la vostra conferma."
+"obbligatoriamente caricata tramite /etc/ld.so.preload. Poiché questo "
+"potrebbe potenzialmente danneggiare il sistema, è richiesta la vostra "
+"conferma."
