--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -16,8 +16,8 @@ msgstr ""
 "Project-Id-Version: snoopy\n"
 "Report-Msgid-Bugs-To: mh+debian-packages@zugschlus.de\n"
 "POT-Creation-Date: 2007-02-26 13:12+0100\n"
-"PO-Revision-Date: 2003-08-19 16:10+0100\n"
-"Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
+"PO-Revision-Date: 2007-02-28 01:34+0100\n"
+"Last-Translator: Bart Cornelis <cobaco@skolelinux.no>\n"
 "Language-Team: dutch <debian-l10n-dutch@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -27,16 +27,11 @@ msgstr ""
 #. Description
 #: ../templates:1001
 msgid "Install snoopy library to /etc/ld.so.preload?"
-msgstr "Voeg de snoopy bibliotheek toe in /etc/ld.so.preload?"
+msgstr "Wilt u dat de snoopy bibiliotheek toegevoegd wordt aan /etc/ld.so.preload ?"
 
 #. Type: boolean
 #. Description
 #: ../templates:1001
-msgid ""
-"snoopy is a library that can only reliably do its work if it is mandatorily "
-"preloaded via /etc/ld.so.preload. Since this can potentially do harm to the "
-"system, your consent is needed."
-msgstr ""
-"De snoopy bibliotheek zal slechts betrouwbaar werken als hij via /etc/ld.so."
-"preload gedwongen op voorhand ingeladen wordt. Uw toestemming is vereist "
-"daar dit mogelijk schade toe brengt aanuw systeem."
+msgid "snoopy is a library that can only reliably do its work if it is mandatorily preloaded via /etc/ld.so.preload. Since this can potentially do harm to the system, your consent is needed."
+msgstr "De snoopy bibliotheek werkt enkel betrouwbaar als deze op voorhand wordt ingeladen. Dit kan afgedwongen worden via /etc/ld.so.preload. Omdat het mogelijk is dat dit problemen oplevert voor uw systeem is uw toestemming hiervoor vereist."
+
