--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+$Id: README,v 1.3 2000/10/11 02:57:22 marius Exp $
+
+
 ------------------------------------------------------------------------------
 Snoopy 1.1
 ------------------------------------------------------------------------------
