--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-snoopy (1.8.0-0.1) unstable; urgency=low
+snoopy (1.8.0-1) unstable; urgency=low
 
-  * New upstream version.
+  * New maintainer.
+  * New upstream version (closes: #629832).
     * Static log function patch moved into upstream code
     * -fPIC build patch moved into upstream code
     * rm -f on clean patch moved into upstream code
@@ -14,7 +15,7 @@ snoopy (1.8.0-0.1) unstable; urgency=low
   * Removed obsolete Linda override
   * Updated copyright file and converted it to DEP-5 format
 
- -- Zed Pobre <zed@debian.org>  Wed, 01 Jun 2011 13:08:49 -0400
+ -- Zed Pobre <zed@debian.org>  Wed, 08 Jun 2011 14:29:58 -0400
 
 snoopy (1.3-13) unstable; urgency=low
 
