--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+snoopy (1.8.0-3) unstable; urgency=low
+
+  * Merge back in changes from 1.3-15 that were dropped in the original
+    package transition (closes: #639855)
+
+ -- Zed Pobre <zed@debian.org>  Mon, 05 Sep 2011 17:08:41 -0400
+
 snoopy (1.8.0-2) unstable; urgency=low
 
   * Correct debian/copyright to show that the upstream code is licensed
