--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+snoopy (1.8.0-4) unstable; urgency=low
+
+  * Add Danish Debconf translation (closes: #660392)
+  * Standards-Version 3.9.3 (no changes)
+
+ -- Zed Pobre <zed@debian.org>  Fri, 17 Aug 2012 14:10:07 -0400
+
 snoopy (1.8.0-3) unstable; urgency=low
 
   * Merge back in changes from 1.3-15 that were dropped in the original
