--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,13 @@
 -------------------------------------------------------------------------------
 
 
+2014-11-08 - Version  2.1.0
+---------------------------
+o Enhancement: strict checking of ./configure --with-syslog-* values
+o Enhancement: enabled configuration of syslog facility and level from
+    configuration file
+
+
 2014-11-07 - Version  2.0.1
 ---------------------------
 o Bugfix: fixed uninitialized pointer in filter/exclude_uid.c and only_uid.c
