--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+snoopy (2.3.0-1) unstable; urgency=medium
+
+  * New upstream version
+
+ -- Zed Pobre <zed@debian.org>  Tue, 19 May 2015 15:02:19 -0400
+
 snoopy (1.8.0-5) unstable; urgency=low
 
   * Add Slovak Debconf translation (closes: #685370)
