--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
-snoopy (2.3.0-1) unstable; urgency=medium
+snoopy (2.3.1-1) unstable; urgency=medium
 
   * New upstream version
+  * Fixes the boot loop with systemd (closes: #784682)
+  * Changes the logging procedure in a way that prevents system lockups
+    when a remote logserver stops responding properly.
+  * There is a new configuration file option that is NOT being used by
+    this package to minimize usage overhead.  If you need this feature,
+    you will need to recompile the package.
 
  -- Zed Pobre <zed@debian.org>  Tue, 19 May 2015 15:02:19 -0400
 
