--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+snoopy (2.3.1-2) unstable; urgency=medium
+
+  * Add automake to build-depends (closes: #788323)
+
+ -- Zed Pobre <zed@debian.org>  Sat, 20 Jun 2015 00:44:43 -0400
+
 snoopy (2.3.1-1) unstable; urgency=high
 
   * New upstream version, new upstream homepage
